--- a/index.html
+++ b/index.html
@@ -1,9 +1,24 @@
+<!DOCTYPE html>
 <html>
-  <head>
-    <title>Server Hello World: Static Website</title>
-  </head>
-  <body>
-    <h1>Happy Coding</h1>
-    <p>Hello world!</p>
-  </body>
+<head>
+<script>
+function validateForm() {
+  let x = document.forms["myForm"]["fname"].value;
+  if (x == "") {
+    alert("Name must be filled out");
+    return false;
+  }
+}
+</script>
+</head>
+<body>
+
+<h2>JavaScript Validation</h2>
+
+<form name="myForm" action="/action_page.php" onsubmit="return validateForm()" method="post">
+  Name: <input type="text" name="fname">
+  <input type="submit" value="Submit">
+</form>
+
+</body>
 </html>
