--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@ function validateForm() {
 </head>
 <body>
 
-<h2>JavaScript Validation</h2>
+<h2>TECH4GOOD LOGIN</h2>
 
 <form name="myForm" action="/action_page.php" onsubmit="return validateForm()" method="post">
-  Name: <input type="text" name="fname">
+  Login ID: <input type="text" name="fname">
   <input type="submit" value="Submit">
 </form>
 
