--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@ input[type=submit] {
 </head>
 <body>
 
-<h3>Password Validation</h3>
-<p>Try to submit the form.</p>
+<h3>TECH4GOOD</h3>
+<p>User Login.</p>
 
 <div class="container">
   <form action="/action_page.php">
