--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ input[type=submit] {
 <body>
 
 <h3>TECH4GOOD</h3>
-<p>User Login.</p>
+<p>User Login</p>
 
 <div class="container">
   <form action="/action_page.php">
