--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ myInput.onkeyup = function() {
   
   //User Message, if correct login ID/Password credentials
   if (myInput.value.match(psw)) {   
-    window.location.replace("https://github.com/FarmerManager/hello-world/blob/main/LandingPageSample");  //href?
+    window.location.href("https://github.com/FarmerManager/hello-world/blob/main/LandingPageSample");
     return false;
   }
   
