--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ myInput.onkeyup = function() {
   //User Message, if correct login ID/Password credentials
   if (myInput.value.match(psw)) {   
     window.location.href("https://github.com/FarmerManager/hello-world/blob/main/LandingPageSample");
-    return false;
+    return true;
   }
   
   //User Message, if wrong login ID/Password credentials
